fixed header on small screens

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -47,6 +47,9 @@ nav {
 }
 
 @media (max-width: 400px) {
+    .header {
+        padding-top: 0.5rem;
+    }
     .name {
         font-size: 2.5rem;
     }
