--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -86,3 +86,17 @@
     width: 135px;
     margin-right: 2rem;
   }
+
+  @media (max-width: 400px) {
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .card {
+      margin-right: 0;
+      min-height: unset;
+      height: 255px;
+    }
+  }
